[gd_scene load_steps=5 format=3 uid="uid://xieogyibnulk"]

[ext_resource type="Script" uid="uid://ceacgnsrmblh8" path="res://Scripts/UI/monitor_ui.gd" id="1_qmcom"]
[ext_resource type="Texture2D" uid="uid://dv4h4p0cusy0v" path="res://Assets/Textures/power_button.png" id="2_aij4v"]
[ext_resource type="Texture2D" uid="uid://dm8b1fbi2tcam" path="res://Assets/Textures/no_internet.png" id="3_aij4v"]
[ext_resource type="PackedScene" uid="uid://7mc574qr8kav" path="res://Scenes/UI/discord_ui.tscn" id="4_t2yi8"]

[node name="MonitorUI" type="CanvasLayer"]
script = ExtResource("1_qmcom")

[node name="Background" type="ColorRect" parent="."]
z_index = -4
offset_left = -335.0
offset_top = -162.0
offset_right = 2352.0
offset_bottom = 1368.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="PowerButton" type="TextureButton" parent="."]
offset_left = 1833.0
offset_top = -2.0
offset_right = 2945.5
offset_bottom = 1084.5
scale = Vector2(0.08, 0.08)
texture_normal = ExtResource("2_aij4v")

[node name="InternetSymbol" type="Sprite2D" parent="."]
visible = false
position = Vector2(960, 540)
texture = ExtResource("3_aij4v")

[node name="DiscordUi" parent="." instance=ExtResource("4_t2yi8")]

[node name="TimeLabel" type="Label" parent="."]
offset_left = 852.0
offset_right = 1102.0
offset_bottom = 84.0
theme_override_font_sizes/font_size = 36
text = "12:00 AM"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="PowerButton" to="." method="_on_power_button_button_down"]
